[workspace]
resolver = "2"
members = [
  "./actix-client-ip-cloudflare",
  "./actix-hash",
  "./actix-web-lab-derive",
  "./actix-web-lab",
]

[workspace.package]
repository = "https://github.com/robjtede/actix-web-lab"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
rust_2018_idioms = "deny"
nonstandard_style = "deny"
future_incompatible = "warn"
missing_docs = "warn"
missing_debug_implementation = "warn"

[patch.crates-io]
actix-client-ip-cloudflare = { path = "./actix-client-ip-cloudflare" }
actix-hash = { path = "./actix-hash" }
actix-web-lab = { path = "./actix-web-lab" }
actix-web-lab-derive = { path = "./actix-web-lab-derive" }
