[package]
name = "actix-client-ip-cloudflare"
version = "0.1.1"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Extractor for trustworthy client IP addresses when proxied through Cloudflare"
keywords = ["actix", "web", "client", "ip", "cloudflare"]
categories = ["web-programming"]
repository = "https://github.com/robjtede/actix-web-lab"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fetch-ips"]
fetch-ips = ["fetch-ips-rustls"]
fetch-ips-rustls = ["awc", "awc/rustls"]
fetch-ips-openssl = ["awc", "awc/openssl"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false }
awc = { version = "3", optional = true }
impl-more = "0.1.5"
ipnetwork = { version = "0.20", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.30", features = ["log"] }

[dev-dependencies]
actix-web = "4"
env_logger = "0.10"

[[example]]
name = "fetch-ips"
required-features = ["fetch-ips"]

[[example]]
name = "extract-header"
required-features = ["fetch-ips"]
