[package]
name = "actix-client-ip-cloudflare"
version = "0.2.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Extractor for trustworthy client IP addresses when proxied through Cloudflare"
keywords = ["actix", "web", "client", "ip", "cloudflare"]
categories = ["web-programming"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "actix_http::*",
  "actix_utils::*",
  "actix_web::*",
  "http::*",
  "ipnetwork::*",
]

[features]
default = ["fetch-ips"]
fetch-ips = ["fetch-ips-rustls"]
fetch-ips-rustls = ["awc", "awc/rustls-0_23"]
fetch-ips-openssl = ["awc", "awc/openssl"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false }
awc = { version = "3.5", optional = true }
impl-more = "0.1.5"
ipnetwork = { version = "0.20", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.30", features = ["log"] }

[dev-dependencies]
actix-web = "4"
env_logger = "0.11"

[[example]]
name = "fetch-ips"
required-features = ["fetch-ips"]

[[example]]
name = "extract-header"
required-features = ["fetch-ips"]

[lints]
workspace = true
