[package]
name = "actix-client-ip-cloudflare"
version = "0.2.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Extractor for trustworthy client IP addresses when proxied through Cloudflare"
keywords = ["actix", "web", "client", "ip", "cloudflare"]
categories = ["web-programming"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
autoexamples = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = ["actix_http::*", "actix_utils::*", "actix_web::*", "http::*", "ipnetwork::*"]

[features]
default = ["fetch-ips"]
fetch-ips = ["fetch-ips-rustls"]
fetch-ips-rustls = ["dep:reqwest", "reqwest/rustls"]
fetch-ips-openssl = ["dep:reqwest", "reqwest/native-tls"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false }
impl-more = "0.3"
ipnetwork = { version = "0.21", features = ["serde"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"

[dev-dependencies]
actix-web = "4"
rustls = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "fetch-ips"
required-features = ["fetch-ips-rustls"]

[[example]]
name = "extract-header"
required-features = ["fetch-ips-rustls"]

[lints]
workspace = true
