[package]
name = "actix-hash"
version = "0.4.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Hashing utilities for Actix Web"
keywords = ["actix", "http", "web", "framework", "async"]
categories = [
    "web-programming::http-server",
    "cryptography",
]
repository = "https://github.com/robjtede/actix-web-lab.git"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [
    "blake2",
    "md5",
    "md4",
    "sha1",
    "sha2",
    "sha3",
]
blake2 = ["dep:blake2"]
md5 = ["dep:md5"]
md4 = ["dep:md4"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]

[dependencies]
actix-http = "3"
actix-web = { version = "4", default-features = false }
actix-web-lab = "0.18.5"
futures-core = "0.3.17"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
local-channel = "0.1"
tokio = { version = "1.13.1", features = ["sync", "macros"] }
pin-project-lite = "0.2"
tracing = { version = "0.1.30", features = ["log"] }

digest = "0.10"
subtle = "2"
blake2 = { package = "blake2", version = "0.10", optional = true }
md5 = { package = "md-5", version = "0.10", optional = true }
md4 = { package = "md4", version = "0.10", optional = true }
sha1 = { package = "sha1", version = "0.10", optional = true }
sha2 = { package = "sha2", version = "0.10", optional = true }
sha3 = { package = "sha3", version = "0.10", optional = true }

[dev-dependencies]
actix-web = "4"
base64 = "0.13"
env_logger = "0.9"
hex-literal = "0.3"

[[test]]
name = "body_hash"
required-features = ["sha2"]

[[example]]
name = "body_sha2"
required-features = ["sha2"]
