[package]
name = "actix-hash"
version = "0.5.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Hashing utilities for Actix Web"
keywords = ["actix", "http", "web", "request", "hash"]
categories = ["web-programming::http-server", "cryptography"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "actix_http::*",
  "actix_utils::*",
  "actix_web::*",
  "blake2::*",
  "blake3::*",
  "crypto_common::*",
  "digest::*",
  "generic_array::*",
  "md4::*",
  "md5::*",
  "sha1::*",
  "sha2::*",
  "sha3::*",
]

[features]
default = ["blake2", "blake3", "md4", "md5", "sha1", "sha2", "sha3"]
blake2 = ["dep:blake2"]
blake3 = ["dep:blake3"]
md4 = ["dep:md4"]
md5 = ["dep:md5"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]

[dependencies]
actix-http = "3"
actix-web = { version = "4", default-features = false }
actix-web-lab = "0.22"
futures-core = "0.3.17"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
local-channel = "0.1"
pin-project-lite = "0.2"
tokio = { version = "1.24.2", features = ["sync", "macros"] }
tracing = { version = "0.1.30", features = ["log"] }

blake2 = { package = "blake2", version = "0.10", optional = true }
blake3 = { package = "blake3", version = "1.5", optional = true, features = ["traits-preview"] }
digest = "0.10"
md4 = { package = "md4", version = "0.10", optional = true }
md5 = { package = "md-5", version = "0.10", optional = true }
sha1 = { package = "sha1", version = "0.10", optional = true }
sha2 = { package = "sha2", version = "0.10", optional = true }
sha3 = { package = "sha3", version = "0.10", optional = true }
subtle = "2"

[dev-dependencies]
actix-web = "4"
base64 = "0.22"
env_logger = "0.11"
hex-literal = "0.4"
sha2 = "0.10"

[[test]]
name = "body_hash"
required-features = ["sha2"]

[[example]]
name = "body_sha2"
required-features = ["sha2"]

[lints]
workspace = true
