[package]
name = "actix-proxy-protocol"
version = "0.1.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Actix integration for the PROXY protocol"
keywords = ["proxy", "protocol", "network", "haproxy", "tcp"]
categories = ["network-programming", "asynchronous"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = ["actix_rt::*", "actix_service::*", "actix_utils::*", "proxyproto::*", "tokio::*"]

[dependencies]
actix-rt = "2.11"
actix-service = "2"
actix-utils = "3"
futures-core = { version = "0.3.17", default-features = false, features = ["std"] }
pin-project-lite = "0.2"
proxyproto = { path = "../proxyproto", version = "0.2", features = ["tokio"] }
tokio = { version = "1.13.1", features = ["sync", "io-util"] }

[dev-dependencies]
actix-codec = "0.5"
actix-http = "3"
actix-rt = "2.6"
actix-server = "2"
bytes = "1"
futures-util = { version = "0.3.7", default-features = false, features = ["sink", "async-await-macro"] }
tokio = { version = "1.38.2", features = ["io-util", "rt-multi-thread", "macros", "fs"] }
tracing = { version = "0.1.30", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
