[package]
name = "actix-web-lab-derive"
version = "0.19.0"
description = "Experimental macros for Actix Web"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["actix", "http", "web", "framework", "async"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
  "web-programming::websocket",
]
repository = "https://github.com/robjtede/actix-web-lab"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
actix-web-lab = "=0.19.1"

actix-test = "0.1"
actix-web = "4"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
rustversion = "1"
tokio = { version = "1.18.5", features = ["macros"] }
trybuild = "1"
