[package]
name = "actix-web-lab-derive"
version = "0.24.0"
description = "Experimental macros for Actix Web"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["actix", "http", "web", "framework", "async"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
  "web-programming::websocket",
]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
actix-web-lab = "0.24"

actix-test = "0.1"
actix-web = "4"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
rustversion = "1"
tokio = { version = "1.44.2", features = ["macros"] }
trybuild = "1"

[lints]
workspace = true
