[package]
name = "actix-web-lab"
version = "0.18.9"
description = "In-progress extractors and middleware for Actix Web"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["actix", "http", "web", "framework", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]
repository = "https://github.com/robjtede/actix-web-lab.git"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["derive", "spa", "cbor"]
derive = ["actix-web-lab-derive"]

cbor = ["serde_cbor_2"]
msgpack = ["rmp-serde"]
spa = ["actix-files"]

[dependencies]
actix-web-lab-derive = { version = "=0.18.0", optional = true }

actix-web = { version = "4", default-features = false }
actix-http = "3"
actix-service = "2"
actix-router = "0.5"
actix-utils = "3"
bytestring = "1"
ahash = "0.8"
arc-swap = "1.1"
async-trait = "0.1"
csv = "1.1"
bytes = "1"
derive_more = "0.99.8"
futures-core = "0.3.17"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
http = "0.2.7"
itertools = "0.10"
impl-more = "0.1"
local-channel = "0.1"
mediatype = "0.19"
mime = "0.3"
once_cell = "1.8"
pin-project-lite = "0.2.7"
regex = "1.5.5"
serde = "1"
serde_json = "1"
serde_html_form = "0.1"
tokio = { version = "1.13.1", features = ["sync", "macros"] }
tracing = { version = "0.1.30", features = ["log"] }

# cbor
serde_cbor_2 = { version = "0.12.0-dev", optional = true }

# msgpack
rmp-serde = { version = "1", optional = true }

# spa
actix-files = { version = "0.6", optional = true }

[dev-dependencies]
actix-web-lab-derive = "=0.18.0"

actix-web = { version = "4", features = ["rustls"] }
async_zip = "0.0.9"
base64 = "0.20"
digest = "0.10"
ed25519-dalek = "1.0.1"
env_logger = "0.10"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
generic-array = "0.14"
hex = "0.4"
hex-literal = "0.3"
hmac = { version = "0.12", features = ["reset"] }
rand = "0.8"
rustls = "0.20"
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
static_assertions = "1.1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.13.1", features = ["full"] }

[[example]]
name = "cbor"
required-features = ["cbor"]

[[example]]
name = "msgpack"
required-features = ["msgpack"]

[[example]]
name = "spa"
required-features = ["spa"]
