[package]
name = "proxyproto"
version = "0.2.1"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "PROXY protocol parsing and serialization"
keywords = ["proxy", "protocol", "network", "haproxy"]
categories = ["network-programming"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = ["bitflags::*", "tokio::*", "winnow::*"]

[features]
default = []
tokio = ["dep:arrayvec", "dep:tokio"]

[dependencies]
arrayvec = { version = "0.7", optional = true }
bitflags = "2"
crc32c = "0.6.8"
itoa = "1"
smallvec = "1"
tokio = { version = "1.13.1", optional = true, features = ["io-util"] }
winnow = "1"

[dev-dependencies]
const-str = "1"
pretty_assertions = "1"

[lints]
workspace = true
