[package]
name = "russe"
version = "0.0.2"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Server-Sent Events (SSE) decoder"
keywords = ["sse", "server", "sent", "events"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
awc-3 = []
mime = ["dep:mime"]
reqwest-0_12 = ["dep:reqwest"]

[dependencies]
aho-corasick = "1"
bytes = "1"
bytestring = "1.4"
futures-util = "0.3.18"
memchr = "2"
mime = { version = "0.3.17", optional = true }
reqwest = { version = "0.12.9", optional = true, features = ["stream"] }
tokio = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.30"

[dev-dependencies]
futures-test = "0.3"
indoc = "2"
tokio = { version = "1.28.2", features = ["macros"] }
tokio-util = { version = "0.7", features = ["codec", "io", "rt"] }
tokio-test = "0.4"

[lints]
workspace = true
