[package]
name = "russe"
version = "0.0.4"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Server-Sent Events (SSE) decoder"
keywords = ["sse", "server", "sent", "events"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
awc-3 = []
mime = ["dep:mime"]
reqwest-0_12 = ["dep:reqwest-0_12"]

[dependencies]
aho-corasick = "1"
bytes = "1"
bytestring = "1.4"
futures-util = "0.3.18"
memchr = "2"
mime = { version = "0.3.17", optional = true }
reqwest-0_12 = { package = "reqwest", version = "0.12", optional = true, features = ["stream"] }
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.41"

[dev-dependencies]
futures-test = "0.3"
eyre = "0.6"
color-eyre = "0.6"
indoc = "2"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-test = "0.4"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io", "rt"] }

[[example]]
name = "manager"
required-features = ["reqwest-0_12"]

[lints]
workspace = true
